Initial port to 1.21.6

--- a/common/src/main/resources/META-INF/accesstransformer-nf.cfg
+++ b/common/src/main/resources/META-INF/accesstransformer-nf.cfg
@@ -9,7 +9,7 @@ public net.minecraft.client.renderer.RenderStateShard VIEW_OFFSET_Z_LAYERING
 public net.minecraft.client.renderer.RenderStateShard NO_LAYERING
 public net.minecraft.client.renderer.RenderStateShard OVERLAY
 public net.minecraft.client.renderer.RenderPipelines register(Lcom/mojang/blaze3d/pipeline/RenderPipeline;)Lcom/mojang/blaze3d/pipeline/RenderPipeline;
-public net.minecraft.client.renderer.RenderPipelines MATRICES_COLOR_FOG_SNIPPET
+public net.minecraft.client.renderer.RenderPipelines MATRICES_FOG_LIGHT_DIR_SNIPPET
 public net.minecraft.client.renderer.RenderType create(Ljava/lang/String;IZZLcom/mojang/blaze3d/pipeline/RenderPipeline;Lnet/minecraft/client/renderer/RenderType$CompositeState;)Lnet/minecraft/client/renderer/RenderType$CompositeRenderType;
 
 # Per-Bone PoseStack Manipulation
@@ -40,3 +40,4 @@ public net.minecraft.core.component.PatchedDataComponentMap copyOnWrite
 
 # Animated Texture
 public-f net.minecraft.client.renderer.texture.ReloadableTexture doLoad(Lcom/mojang/blaze3d/platform/NativeImage;ZZ)V
+public-f net.minecraft.client.renderer.texture.CubeMapTexture doLoad(Lcom/mojang/blaze3d/platform/NativeImage;ZZ)V
