--- a/forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -9,7 +9,7 @@ public net.minecraft.client.renderer.RenderStateShard f_110119_ # VIEW_OFFSET_Z_
 public net.minecraft.client.renderer.RenderStateShard f_110117_ # NO_LAYERING
 public net.minecraft.client.renderer.RenderStateShard f_110154_ # OVERLAY
 public net.minecraft.client.renderer.RenderPipelines m_385473_(Lcom/mojang/blaze3d/pipeline/RenderPipeline;)Lcom/mojang/blaze3d/pipeline/RenderPipeline;
-public net.minecraft.client.renderer.RenderPipelines f_382492_
+public net.minecraft.client.renderer.RenderPipelines MATRICES_FOG_LIGHT_DIR_SNIPPET # MATRICES_FOG_LIGHT_DIR_SNIPPET
 public net.minecraft.client.renderer.RenderType m_173215_(Ljava/lang/String;IZZLcom/mojang/blaze3d/pipeline/RenderPipeline;Lnet/minecraft/client/renderer/RenderType$CompositeState;)Lnet/minecraft/client/renderer/RenderType$CompositeRenderType;
 
 # Per-Bone PoseStack Manipulation
@@ -39,4 +39,5 @@ public net.minecraft.client.model.geom.ModelPart f_104212_ # cubes
 public net.minecraft.core.component.PatchedDataComponentMap f_316660_ # copyOnWrite
 
 # Animated Texture
-public-f net.minecraft.client.renderer.texture.ReloadableTexture m_373532_(Lcom/mojang/blaze3d/platform/NativeImage;ZZ)V
+public-f net.minecraft.client.renderer.texture.ReloadableTexture m_373532_(Lcom/mojang/blaze3d/platform/NativeImage;ZZ)V # doLoad
+public-f net.minecraft.client.renderer.texture.CubeMapTexture m_373532_(Lcom/mojang/blaze3d/platform/NativeImage;ZZ)V # doLoad
