--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,18 +3,18 @@
     geckolib = "5.1.0"
 
 # Common
-    minecraft-range = "[1.21.5,)"
-    minecraft = "1.21.5"
+    minecraft-range = "[1.21.6,)"
+    minecraft = "1.21.6"
     parchment-minecraft = "1.21.5"
     parchment = "2025.06.15"
-    neoform = "1.21.5-20250325.162830"
+    neoform = "1.21.6-20250617.151856"
     jopt-simple = "5.0.4"
 
 # Fabric
     fabric = "0.16.14"
     fabric-range = "0.16"
-    fabric-api = "0.127.0+1.21.5"
-    fabric-api-range = "0.119.5+1.21.5"
+    fabric-api = "0.127.0+1.21.6"
+    fabric-api-range = "0.127.0+1.21.6"
 
 # Forge
     forge-fml-range = "[55,)"
@@ -24,8 +24,8 @@
 
 # Neoforge
     neoforge-loader-range = "[5,)"
-    neoforge-range = "[21.5.75,)"
-    neoforge = "21.5.75"
+    neoforge-range = "[21.6.0-beta,)"
+    neoforge = "21.6.0-beta"
 
 # Dependencies
     mixin = "0.8.7"
@@ -39,7 +39,7 @@
     plugin-minotaur = "2.8.7"
     plugin-curseforge-gradle = "1.1.26"
     plugin-idea-ext = "1.1.10"
-    plugin-forge-gradle = "[6.0.35,6.2)"
+    plugin-forge-gradle = "[6.0.36,6.2)"
     plugin-mixin = "0.7.+"
     plugin-parchment-forge-gradle = "1.+"
     plugin-loom = "1.10-SNAPSHOT"
