--- a/src/main/resources/riftlib_at.cfg
+++ b/src/main/resources/riftlib_at.cfg
@@ -1,1 +1,8 @@
 public net.minecraft.entity.Entity func_70101_b(FF)V # setRotation
+
+# arrow related stuff
+public net.minecraft.entity.projectile.EntityArrow field_145790_g # inTile
+public net.minecraft.entity.projectile.EntityArrow field_70253_h # inData
+public net.minecraft.entity.projectile.EntityArrow field_145791_d # xTile
+public net.minecraft.entity.projectile.EntityArrow field_145792_e # yTile
+public net.minecraft.entity.projectile.EntityArrow field_145789_f # zTile
