--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,10 @@ org.gradle.daemon=false
 
 org.gradle.jvmargs = -Xmx6G
 
+# Testing
+enable_junit_testing = true
+show_testing_output = false
+
 # Mod Information
 mod_version = 1.0.0
 maven_group = anightdazingzoroark
