--- a/build.gradle
+++ b/build.gradle
@@ -129,6 +129,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     runtimeOnly 'com.cleanroommc:strip-latest-forge-requirements:1.0'
+    compileOnly files("lib/Hwyla-1.8.26-B41_1.12.2.jar")
     contain 'com.fasterxml.jackson.core:jackson-databind:2.19.0'
     contain 'com.fasterxml.jackson.core:jackson-core:2.19.0'
     contain 'com.fasterxml.jackson.core:jackson-annotations:2.19.0'
