--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,31 +1,31 @@
 [versions]
 # GeckoLib
-    geckolib = "5.2.1"
+    geckolib = "5.2.2"
 
 # Common
-    minecraft-range = "[1.21.7,)"
-    minecraft = "1.21.7"
-    parchment-minecraft = "1.21.5"
-    parchment = "2025.06.15"
-    neoform = "1.21.7-20250630.141722"
+    minecraft-range = "[1.21.8,)"
+    minecraft = "1.21.8"
+    parchment-minecraft = "1.21.6"
+    parchment = "2025.06.29"
+    neoform = "1.21.8-20250717.133445"
     jopt-simple = "5.0.4"
 
 # Fabric
     fabric = "0.16.14"
     fabric-range = "0.16"
-    fabric-api = "0.128.1+1.21.7"
-    fabric-api-range = "0.128.0+1.21.7"
+    fabric-api = "0.130.0+1.21.8"
+    fabric-api-range = "0.129.0+1.21.8"
 
 # Forge
-    forge-fml-range = "[57,)"
-    forge-range = "[57.0.0,)"
-    forge = "57.0.0"
-    forge-mc = "1.21.7-57.0.0"
+    forge-fml-range = "[58,)"
+    forge-range = "[58.0.0,)"
+    forge = "58.0.2"
+    forge-mc = "1.21.8-58.0.2"
 
 # Neoforge
     neoforge-loader-range = "[5,)"
-    neoforge-range = "[21.7.0-beta,)"
-    neoforge = "21.7.1-beta"
+    neoforge-range = "[21.8.20,)"
+    neoforge = "21.8.24"
 
 # Dependencies
     mixin = "0.8.7"
@@ -35,7 +35,7 @@
     iris = "kuOV4Ece"
 
 # Plugins
-    plugin-moddevgradle = "2.0.96"
+    plugin-moddevgradle = "2.0.103"
     plugin-minotaur = "2.8.7"
     plugin-curseforge-gradle = "1.1.26"
     plugin-idea-ext = "1.1.10"
