--- a/build.gradle
+++ b/build.gradle
@@ -102,6 +102,16 @@ repositories {
         name 'CurseMaven'
         url 'https://cursemaven.com'
     }
+    maven {
+        // location of the maven that hosts JEI files
+        name = "Progwml6 maven"
+        url = "https://dvs1.progwml6.com/files/maven/"
+    }
+    maven {
+        // location of a maven mirror for JEI files, as a fallback
+        name = "ModMaven"
+        url = "https://modmaven.dev"
+    }
     mavenLocal() // Must be last for caching to work
 }
 
@@ -130,10 +140,12 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     runtimeOnly 'com.cleanroommc:strip-latest-forge-requirements:1.0'
     compileOnly files("lib/Hwyla-1.8.26-B41_1.12.2.jar")
+    compileOnly "mezz.jei:jei_1.12.2:4.16.1.302:api"
     contain 'com.fasterxml.jackson.core:jackson-databind:2.19.0'
     contain 'com.fasterxml.jackson.core:jackson-core:2.19.0'
     contain 'com.fasterxml.jackson.core:jackson-annotations:2.19.0'
     contain 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.19.0'
+    implementation "mezz.jei:jei_1.12.2:4.16.1.302"
 }
 
 // Adds Access Transformer files to tasks
