Embrace forge backport of ResourceLocation constructor change

--- a/Forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/Forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,5 +1,7 @@
 public net.minecraft.world.entity.Entity m_7939_()Lnet/minecraft/world/phys/Vec3; # getLeashOffset
 public net.minecraft.world.entity.Entity m_20099_()Lnet/minecraft/core/BlockPos; # getBlockPosBelowThatAffectsMyMovement
+public net.minecraft.world.entity.item.ItemEntity m_20099_()Lnet/minecraft/core/BlockPos; # getBlockPosBelowThatAffectsMyMovement
+public net.minecraft.world.entity.ExperienceOrb m_20099_()Lnet/minecraft/core/BlockPos; # getBlockPosBelowThatAffectsMyMovement
 
 public net.minecraft.client.model.geom.ModelPart$Cube
 public net.minecraft.client.model.geom.ModelPart f_104212_ # cubes
