Update for Alpha 2

--- a/common/src/main/resources/META-INF/accesstransformer-nf.cfg
+++ b/common/src/main/resources/META-INF/accesstransformer-nf.cfg
@@ -27,6 +27,10 @@ public-f net.minecraft.client.renderer.entity.EntityRenderer createRenderState(L
 public net.minecraft.client.renderer.entity.LivingEntityRenderer solveBodyRot(Lnet/minecraft/world/entity/LivingEntity;FF)F
 public net.minecraft.client.renderer.entity.HumanoidMobRenderer getEquipmentIfRenderable(Lnet/minecraft/world/entity/LivingEntity;Lnet/minecraft/world/entity/EquipmentSlot;)Lnet/minecraft/world/item/ItemStack;
 public net.minecraft.client.renderer.entity.LivingEntityRenderer isUpsideDownName(Ljava/lang/String;)Z
+public-f net.minecraft.client.renderer.entity.state.LivingEntityRenderState headItem
+public-f net.minecraft.client.renderer.entity.state.ArmedEntityRenderState rightHandItem
+public-f net.minecraft.client.renderer.entity.state.ArmedEntityRenderState leftHandItem
+public-f net.minecraft.client.renderer.entity.state.AvatarRenderState heldOnHead
 
 # Block Rendering
 public net.minecraft.client.renderer.blockentity.BlockEntityRenderDispatcher renderers
