--- a/forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -27,6 +27,10 @@ public-f net.minecraft.client.renderer.entity.EntityRenderer m_356383_(Lnet/mine
 public net.minecraft.client.renderer.entity.LivingEntityRenderer m_354794_(Lnet/minecraft/world/entity/LivingEntity;FF)F # solveBodyRot
 public net.minecraft.client.renderer.entity.HumanoidMobRenderer m_372303_(Lnet/minecraft/world/entity/LivingEntity;Lnet/minecraft/world/entity/EquipmentSlot;)Lnet/minecraft/world/item/ItemStack; # getEquipmentIfRenderable
 public net.minecraft.client.renderer.entity.LivingEntityRenderer m_415019_(Ljava/lang/String;)Z # isUpsideDownName
+public-f net.minecraft.client.renderer.entity.state.LivingEntityRenderState f_347614_ # headItem
+public-f net.minecraft.client.renderer.entity.state.ArmedEntityRenderState f_371485_ # rightHandItem
+public-f net.minecraft.client.renderer.entity.state.ArmedEntityRenderState f_370903_ # leftHandItem
+public-f net.minecraft.client.renderer.entity.state.AvatarRenderState f_413164_ # heldOnHead
 
 # Block Rendering
 public net.minecraft.client.renderer.blockentity.BlockEntityRenderDispatcher f_112251_ # renderers
