--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -61,10 +61,6 @@
     examplemod-forge = { group = "software.bernie.geckolib", name = "geckolib-examples-ml-forge-1.21.10", version.ref = "examplemod" }
     examplemod-neoforge = { group = "software.bernie.geckolib", name = "geckolib-examples-ml-neoforge-1.21.10", version.ref = "examplemod" }
 
-# Other
-    jopt-simple = { group = "net.sf.jopt-simple", name = "jopt-simple", version.ref = "jopt-simple" } # Forge's temporary hacky solution
-    forge-eventbusvalidator = { group = "net.minecraftforge", name = "eventbus-validator", version.ref = "forge-eventbusvalidator" }
-
 [plugins]
 # Publishing
     minotaur = { id = "com.modrinth.minotaur", version.ref = "plugin-minotaur" }
@@ -73,8 +69,9 @@
 # Platform
     moddevgradle = { id = "net.neoforged.moddev", version.ref = "plugin-moddevgradle" }
     forgegradle = { id = "net.minecraftforge.gradle", version.ref = "plugin-forge-gradle" }
+    forge-at = { id = "net.minecraftforge.accesstransformers", version.ref = "plugin-forge-at" }
+    forge-eventbusvalidator = { id = "net.minecraftforge.eventbus-validator", version.ref = "forge-eventbusvalidator" }
     loom = { id = "fabric-loom", version.ref = "plugin-loom" }
 
 # Misc
     ideaext = { id = "org.jetbrains.gradle.plugin.idea-ext", version.ref = "plugin-idea-ext" }
-    forge-at = { id = "net.minecraftforge.accesstransformers", version.ref = "plugin-forge-at" }
