--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,8 +19,8 @@
 # Forge
     forge-fml-range = "[61,)"
     forge-range = "[61.0.0,)"
-    forge = "61.0.0"
-    forge-mc = "1.21.11-61.0.0"
+    forge = "61.0.3"
+    forge-mc = "1.21.11-61.0.3"
     forge-eventbusvalidator = "7.0-beta.10"
 
 # Neoforge
@@ -39,7 +39,7 @@
     plugin-minotaur = "2.8.10"
     plugin-curseforge-gradle = "1.1.28"
     plugin-idea-ext = "1.3"
-    plugin-forge-gradle = "[7.0.0-alpha.46,)"
+    plugin-forge-gradle = "[7.0.0-rc.2,)"
     plugin-forge-at = "[5.0.1,)"
     plugin-loom = "1.14-SNAPSHOT"
 
@@ -51,6 +51,7 @@
 # Platform
     neoforge = { group = "net.neoforged", name = "neoforge", version.ref = "neoforge" }
     forge = { group = "net.minecraftforge", name = "forge", version.ref = "forge-mc" }
+    forge-eventbusvalidator = { group = "net.minecraftforge", name = "eventbus-validator", version.ref = "forge-eventbusvalidator" }
     fabric = { group = "net.fabricmc", name = "fabric-loader", version.ref = "fabric" }
     fabric-api = { group = "net.fabricmc.fabric-api", name = "fabric-api", version.ref = "fabric-api" }
     minecraft = { group = "com.mojang", name = "minecraft", version.ref = "minecraft" }
@@ -70,7 +71,6 @@
     moddevgradle = { id = "net.neoforged.moddev", version.ref = "plugin-moddevgradle" }
     forgegradle = { id = "net.minecraftforge.gradle", version.ref = "plugin-forge-gradle" }
     forge-at = { id = "net.minecraftforge.accesstransformers", version.ref = "plugin-forge-at" }
-    forge-eventbusvalidator = { id = "net.minecraftforge.eventbus-validator", version.ref = "forge-eventbusvalidator" }
     loom = { id = "fabric-loom", version.ref = "plugin-loom" }
 
 # Misc
