Add incompatibility messages for geckoanimfix since they refuse to remove their downloads

--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -27,3 +27,9 @@ ${mod_description}
     versionRange="${minecraft_version_range}"
     ordering="NONE"
     side="BOTH"
+[[dependencies.geckolib]]
+    modId="geckoanimfix"
+    mandatory=false
+    versionRange="[9.thismodbreaksgeckolibremoveit,)"
+    ordering="NONE"
+    side="BOTH"
