Update authors for current project environment

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,6 @@ modId=geckolib
 modDisplayName=GeckoLib 5
 group=software.bernie.geckolib
 modLicense=MIT
-modAuthors=Tslat, Gecko
-modContributors=Eliot, AzureDoom, DerToaster, Witixin
+modAuthors=Tslat
+modContributors=Zigy, Witixin, Gecko
 modDescription=GeckoLib is an animation engine for Minecraft Mods, with support for complex 3D keyframe-based animations, 30+ easings, concurrent animation support, sound and particle keyframes, event keyframes, and more.
