--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.daemon=false
 # Project Settings
 modId=geckolib
 modDisplayName=GeckoLib 5
-group=com.geckolib.geckolib
+group=com.geckolib
 modLicense=MIT
 modAuthors=Tslat
 modContributors=Zigy, Witixin, Gecko
